--- a/index.html
+++ b/index.html
@@ -9,3 +9,37 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
+<body>
+  <!--container starts here-->
+  <div class="container">
+    <!--header starts here-->
+    <header id="header">
+      <div class="wrapper">
+        <h1>
+          <a href="#FIXME" title="logo"><img src="assets/images/logo1.png" alt="logo" /></a>
+        </h1>
+        <nav>
+          <ul>
+            <li><a href="#FIXME" title="home">home</a></li>
+            <li><a href="#FIXME" title="portfolio">portfolio</a></li>
+            <li><a href="#FIXME" title="about">about</a></li>
+            <li><a href="#FIXME" title="contact">contact</a></li>
+          </ul>
+        </nav>
+        <div class="hamburgerMenu topnav topmenu" id="main-hamburger">
+          <div class="left-menu">
+            <a href="#FIXME" title="menu" class="hamburger" id="hamburger">
+              <span class="line line1"></span>
+              <span class="line line2"></span>
+              <span class="line line3"></span>
+            </a></div>
+          <ul class="hamMenu" id="myLinks">
+            <li> <a href="#FIXME" title="home">home</a></li>
+            <li><a href="#FIXME" title="portfolio">portfolio</a></li>
+            <li><a href="#FIXME" title="about">about</a></li>
+            <li><a href="#FIXME" title="contact">contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <!--header ends here-->
