added banner and portfolio to html file

--- a/index.html
+++ b/index.html
@@ -43,3 +43,111 @@
       </div>
     </header>
     <!--header ends here-->
+    <!--main starts here-->
+    <main>
+      <!--banner starts here-->
+      <div class="banner">
+        <div class="wrapper">
+          <img src="assets/images/banner.jpg" alt="banner" />
+        </div>
+      </div>
+      <!--banner ends here-->
+      <!--portfolio starts here-->
+      <section class="portfolio">
+        <div class="wrapper">
+          <h2>portfolio</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <ul class="portfolio-cta">
+            <li><a href="#FIXME" title="all" id="all">all</a></li>
+            <li> <a href="#FIXME" title="web design" id="web">web design</a></li>
+            <li><a href="#FIXME" title="graphic design" id="graphic">graphic design</a></li>
+            <li><a href="#FIXME" title="flat design" id="flat">flat design</a></li>
+          </ul>
+          <div class="portfolio-container">
+            <ul class="row">
+              <li class="column column-show graphic">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">graphic design</span>
+                  </div>
+                  <img src="assets/images/camera.jpg" alt="insta" />
+                </a>
+              </li>
+              <li class="column column-show web">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">web design</span>
+                  </div>
+                  <img src="assets/images/Bak-One-Template-PSD---cssauthor_25.jpg" alt="music" />
+                </a>
+              </li>
+              <li class="column column-show flat">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">flat design</span>
+                  </div>
+                  <img src="assets/images/setting.jpg" alt="setting" />
+                </a>
+              </li>
+              <li class="column column-show graphic">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">graphic design</span>
+                  </div>
+                  <img src="assets/images/navigation.jpg" alt="navigation" />
+                </a>
+              </li>
+              <li class="column column-show flat">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">flat design</span>
+                  </div>
+                  <img src="assets/images/call.jpg" alt="call" />
+                </a>
+              </li>
+              <li class="column column-show graphic">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">graphic design</span>
+                  </div>
+                  <img src="assets/images/gems.jpg" alt="gems" />
+                </a>
+              </li>
+              <li class="column column-show web">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">web design</span>
+                  </div>
+                  <img src="assets/images/camera.jpg" alt="camera" />
+                </a>
+              </li>
+              <li class="column column-show flat">
+                <a href="#FIXME" class="img">
+                  <div class="overlay content">
+                    <img src="assets/images/search.png" alt="search" />
+                    <span class="contentTitle">example title</span>
+                    <span class="contentType">flat design</span>
+                  </div>
+                  <img src="assets/images/music.jpg" alt="music" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <!--portfolio ends here-->
+    
