added aboutus and contactus to html file

--- a/index.html
+++ b/index.html
@@ -150,4 +150,94 @@
         </div>
       </section>
       <!--portfolio ends here-->
-    
+      <!--aboutus starts here-->
+      <section class="aboutus">
+        <div class="wrapper">
+          <h2>about us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="card-wrap">
+            <div class="card-container">
+              <a href="#FIXME" class="cards">
+                <div class="card">
+                  <img src="assets/images/profile1.jpg" alt="img" />
+                  <div class="info">
+                    <h3>melannie doe</h3>
+                    <span class="card-title">project manager</span>
+                    <span class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing
+                      elit. Repellat, excepturi! Lorem ipsum dolor sit amet
+                      consectetur consectetur</span>
+                  </div>
+                </div>
+              </a>
+              <div class="card-over">
+                <a href="#FIXME" target="_blank"><img src="assets/images/sociallinks.png" alt="img" class="cardLink" /></a>
+              </div>
+            </div>
+            <div class="card-container">
+              <a href="#FIXME" class="cards">
+                <div class="card">
+                  <img src="assets/images/profile2.jpg" alt="img" />
+                  <div class="info">
+                    <h3>jhonnie doe</h3>
+                    <span class="card-title">graphic designer</span>
+                    <span class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing
+                      elit. Repellat, excepturi! Lorem ipsum dolor sit amet
+                      consectetur consectetur</span>
+                  </div>
+                </div>
+              </a>
+              <div class="card-over">
+                <a href="#FIXME" target="_blank"><img src="assets/images/sociallinks.png" alt="img" class="cardLink" /></a>
+              </div>
+            </div>
+            <div class="card-container">
+              <a href="#FIXME" class="cards">
+                <div class="card">
+                  <img src="assets/images/profile3.png" alt="img" />
+                  <div class="info">
+                    <h3>daniel doe</h3>
+                    <span class="card-title">web designer</span>
+                    <span class="card-info">Lorem ipsum dolor sit amet consectetur adipisicing
+                      elit. Repellat, excepturi! Lorem ipsum dolor sit amet
+                      consectetur consectetur</span>
+                  </div>
+                </div>
+              </a>
+              <div class="card-over">
+                <a href="#FIXME" target="_blank"><img src="assets/images/sociallinks.png" alt="img" class="cardLink" /></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--aboutus starts here-->
+      <!--contactus starts here-->
+      <section class="contactus">
+        <div class="wrapper cf">
+          <h2>contact us</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <div class="form">
+            <form action="#" method="GET" name="RegForm" class="cf">
+              <div class="formarea">
+                <input type="text" name="yourname" id="your_name" placeholder="Your name" />
+                <input type="text" name="email" placeholder="Your email" />
+              </div>
+              <textarea rows="3" cols="30" name="address" id="address" placeholder="Your message" required></textarea>
+              <input type="submit" value="SUBMIT" name="submit" class="cf" />
+            </form>
+          </div>
+          <div class="contact-info">
+            <h3>information</h3>
+            <div class="address">
+              <span><i class="material-icons">place</i>Bak-One Company</span>
+              <span>    1234 Hollywood Bvld Street</span>
+              <span>    Los Angeles California</span>
+            </div>
+            <span><a href="tel:+444123456" target="_blank"><i class="material-icons" >call</i>+444(Phone)123456</a></span>
+            <span class="fax"><a href="#FIXME"><i class="material-icons">print</i>+123(Fax)0011223</a></span>
+            <span><a href="mailto:info@bak-onecompany.com"  target="_blank"> <i class="material-icons">mail</i>info@bak-onecompany.com</a></span>
+          </div>
+        </div>
+      </section>
+      <!--contactus ends here-->
+    </main>    
