added footer to html file

--- a/index.html
+++ b/index.html
@@ -241,3 +241,22 @@
       </section>
       <!--contactus ends here-->
     </main>    
+    <!--main ends here-->
+    <!--footer starts here-->
+    <footer class="cf">
+      <p><a href="#FIXME">&#169; Copyright 2013 Bak-One |</a>One Page Flat
+        Template</p>
+      <div class="cf">
+        <a href="#header" title="top" class="top"><i class="material-icons"> keyboard_arrow_up </i></a>
+      </div>
+    </footer>
+    <!--footer ends here-->
+  </div>
+  <!--container ends here-->
+  <script src="js/vendors/jquery-1.8.3.min.js"></script>
+  <script src="assets/js/script.js"></script>
+</body>
+</html>
+
+
+
